Added AWS S3 Bucket Structure

--- a/master.yml
+++ b/master.yml
@@ -114,6 +114,16 @@ Resources:
       TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-iam.yml"
       TimeoutInMinutes: '5'
 
+  MyS3Bucket:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-s3bucket.yml"
+      TimeoutInMinutes: '5'
+      Parameters:
+        # https://cloudonaut.io/pitfall-acm-certificate-cloudfront-cloudformation/
+        # ACM certificate needs to be created in us-east-1 when used together with CloudFront. 
+        PMDomain1CertARN: !FindInMap ["RegionMap", "us-east-1", "CertARN"]
+        PMRegionAStorage: !FindInMap ["RegionMap", !Ref "AWS::Region", "AStorage"]
 
 
 
