Added AWS Route 53 Alias ELB

--- a/infrastructure/webapp-elb-webserver.yml
+++ b/infrastructure/webapp-elb-webserver.yml
@@ -123,9 +123,13 @@ Outputs:
     Description: "A reference to the Web Load Balancer"
     Value: !Ref "WEBLoadBalancer"
 
-  WEBLoadBalancerUrl:
+  WEBLBDNSName:
     Description: "The URL of the Web Load Balancer"
     Value: !GetAtt "WEBLoadBalancer.DNSName"
+
+  WEBLBHostedZoneId:
+    Description: "The CanonicalHostedZoneNameID of the Web Load Balancer"
+    Value: !GetAtt "WEBLoadBalancer.CanonicalHostedZoneNameID"
 
 
 
