--- a/infrastructure/webapp-route53.yml
+++ b/infrastructure/webapp-route53.yml
@@ -10,7 +10,11 @@ Description: >
 Parameters: 
 
   PMWEBDOMAIN:
-    Description: "A reference to the Webserver domain name"
+    Description: "A reference to the Webserver FQDN domain name"
+    Type: "String"
+
+  PMDOMAIN1:
+    Description: "A reference to the Domain name"
     Type: "String"
 
   PMWEBLBDNSName:
@@ -27,18 +31,14 @@ Resources:
   Route53:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
-      HostedZoneName: "kasturicookies.com."
+      HostedZoneName: !Sub "${PMDOMAIN1}."
       Comment: "Zone apex alias targeted to myELB LoadBalancer."
       RecordSets:
-      - Name: !Sub "devel.kasturicookies.com."
-#      - Name: !Sub "${PMWEBDOMAIN}."
+      - Name: !Sub "${PMWEBDOMAIN}."
         Type: 'A'
         AliasTarget:
           HostedZoneId: !Ref "PMWEBLBHostedZoneId"
           DNSName: !Ref "PMWEBLBDNSName"
-#          HostedZoneId: !GetAtt myELB.CanonicalHostedZoneNameID
-#          DNSName: !GetAtt myELB.DNSName
-
 
 
 Outputs:
