Updated Export Value and DependOn Stack

--- a/infrastructure/webapp-s3bucket.yml
+++ b/infrastructure/webapp-s3bucket.yml
@@ -140,6 +140,6 @@ Outputs:
     Description: "S3 Webhosting Bucket Name"
     Value: !Ref "S3CloudFront"
     Export:
-      Name: "S3CloudFront-BucketName"
+      Name: "Export-S3CloudFront"
 
 
