--- a/master.yml
+++ b/master.yml
@@ -268,6 +268,7 @@ Resources:
 
 
 Outputs:
+
   Webserver:
     Description: "Web Server Site"
     Value:
@@ -277,6 +278,11 @@ Outputs:
           - !FindInMap ["EnvMap", !Ref "PMServerEnv", "WEBDOMAIN"]
           - "/"
 
+  PMRDSEnv:
+    Description: "A reference to the Server Environment for RDS"
+    Value: !Ref "PMServerEnv"
+    Export:
+      Name: "Export-PMServerEnv"
 
 
 
