--- a/master.yaml
+++ b/master.yaml
@@ -130,13 +130,13 @@ Resources:
   MyIAMRole:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-iam.yml"
+      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-iam.yaml"
       TimeoutInMinutes: '5'
 
   MyS3Bucket:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-s3bucket.yml"
+      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-s3bucket.yaml"
       TimeoutInMinutes: '5'
       Parameters:
         PMRegionAStorage: !FindInMap ["RegionMap", !Ref "AWS::Region", "AStorage"]
@@ -144,7 +144,7 @@ Resources:
   MyVPC:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-vpc.yml"
+      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-vpc.yaml"
       TimeoutInMinutes: '5'
       Parameters:
         PMServerEnv: !Ref "PMServerEnv"
@@ -158,7 +158,7 @@ Resources:
   MySecurityGroup:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-securitygroup.yml"
+      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-securitygroup.yaml"
       TimeoutInMinutes: '5'
       Parameters:
         PMServerEnv: !Ref "PMServerEnv"
@@ -171,7 +171,7 @@ Resources:
     DependsOn:
     - "MySecurityGroup"
     Properties:
-      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-rds.yml"
+      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-rds.yaml"
       TimeoutInMinutes: '5'
       Parameters:
         PMServerEnv: !Ref "PMServerEnv"
@@ -181,7 +181,7 @@ Resources:
   MyAPPELB:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-elb-appserver.yml"
+      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-elb-appserver.yaml"
       TimeoutInMinutes: '5'
       Parameters:
         PMServerEnv: !Ref "PMServerEnv"
@@ -193,7 +193,7 @@ Resources:
   MyAPPAutoScaling:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-autoscaling-appserver.yml"
+      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-autoscaling-appserver.yaml"
       TimeoutInMinutes: '5'
       Parameters:
         PMServerEnv: !Ref "PMServerEnv"
@@ -215,7 +215,7 @@ Resources:
     DependsOn:
     - "MyAPPAutoScaling"
     Properties:
-      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-elb-webserver.yml"
+      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-elb-webserver.yaml"
       TimeoutInMinutes: '5'
       Parameters:
         PMServerEnv: !Ref "PMServerEnv"
@@ -230,7 +230,7 @@ Resources:
     DependsOn:
     - "MyWEBELB"
     Properties:
-      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-autoscaling-webserver.yml"
+      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-autoscaling-webserver.yaml"
       TimeoutInMinutes: '5'
       Parameters:
         PMServerEnv: !Ref "PMServerEnv"
@@ -252,7 +252,7 @@ Resources:
     DependsOn:
     - "MyWEBAutoScaling"
     Properties:
-      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-cloudwatch.yml"
+      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-cloudwatch.yaml"
       TimeoutInMinutes: '5'
       Parameters:
         PMWebScalingGroup: !GetAtt "MyWEBAutoScaling.Outputs.WebScalingGroup"
@@ -267,7 +267,7 @@ Resources:
     DependsOn:
     - "MyWEBAutoScaling"
     Properties:
-      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-route53.yml"
+      TemplateURL: "https://s3-ap-southeast-1.amazonaws.com/cf-templates-19sg5y0d6d084-ap-southeast-1/webapp-route53.yaml"
       TimeoutInMinutes: '5'
       Parameters:
         PMWEBLBDNSName: !GetAtt "MyWEBELB.Outputs.WEBLBDNSName"
