--- a/infrastructure/webapp-autoscaling-webserver.yaml
+++ b/infrastructure/webapp-autoscaling-webserver.yaml
@@ -1,6 +1,6 @@
 # Note, the development environment will only spin a min of 1 instance (Not HA Support)
 # The production environment will spin a min of 2 instance (HA support)
-# You can adjust the ASMIN, ASMAX, ASDES at the master.yml file
+# You can adjust the ASMIN, ASMAX, ASDES at the master.yaml file
 # to meet your instances spin numbers.
 #
 ---
