--- a/infrastructure/webapp-cdn.yaml
+++ b/infrastructure/webapp-cdn.yaml
@@ -1,4 +1,4 @@
-# Note, Isolate CDN Deployment due to time consuming ~(30min to complete deploy)
+# Note, Initiate separate CDN Deployment due to time consuming ~(30-40min to complete deploy)
 #
 ---
 AWSTemplateFormatVersion: "2010-09-09"
